# kodex

./: README.md  pyproject.toml
kodex/cli/: commands.py
kodex/common/: code_generator.py
kodex/generators/java/spring/: SpringBootGeneratorOrchestrator.py  base_generator.py  entity_generator.py  spring_boot_generator_orchestrator.py  structure_generator.py
kodex/templates/java/spring/: build.gradle.j2
kodex/templates/java/spring/app/: spring_application.j2
kodex/utils/: case_convertion_util.py
